--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.firebase:firebase-client-android:2.0.1+'
+    compile 'com.google.android.gms:play-services:5.0+'
     compile files('libs/volley.jar')
 }
