--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,18 +29,22 @@
             android:name="com.example.mirnabouchra.cloudolympics.JoinActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name="com.example.mirnabouchra.cloudolympics.TappingGameActivity"
+            android:name=".games.TappingGameActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
+        <activity
+            android:name=".games.ShakingGameActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
