--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <activity
             android:name=".games.TappingGameActivity"
-            android:label="@string/app_name" >
+            android:label="@string/tapGameTitle" >
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -43,7 +43,7 @@
 
         <activity
             android:name=".games.ShakingGameActivity"
-            android:label="@string/app_name" >
+            android:label="@string/shakeGameTitle" >
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
