Add logic for game switching

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,9 @@
         </activity>
 
         <activity
-            android:name="com.example.mirnabouchra.cloudolympics.JoinActivity"
+            android:name="com.example.mirnabouchra.cloudolympics.BlankGameActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
