--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
 
         <activity
             android:name="com.example.mirnabouchra.cloudolympics.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -35,7 +35,8 @@
 
         <activity
             android:name=".games.TappingGameActivity"
-            android:label="@string/tapGameTitle" >
+            android:label="@string/tapGameTitle"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -43,7 +44,8 @@
 
         <activity
             android:name=".games.ShakingGameActivity"
-            android:label="@string/shakeGameTitle" >
+            android:label="@string/shakeGameTitle"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
