--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ android {
             storePassword 'android'
         }
     }
-    compileSdkVersion 15
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 21
+    buildToolsVersion '21.1.1'
     defaultConfig {
         applicationId "com.example.mirnabouchra.cloudolympics"
         minSdkVersion 15
-        targetSdkVersion 15
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -48,6 +48,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.firebase:firebase-client-android:2.0.1+'
-    compile 'com.google.android.gms:play-services:5.0+'
-    compile files('libs/volley.jar')
+    compile 'com.google.android.gms:play-services:6.1.+'
+    compile 'com.android.support:appcompat-v7:21.0.+'
 }
