--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.0.1+'
     compile 'com.google.android.gms:play-services:6.1.+'
     compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.melnykov:floatingactionbutton:1.0.7'
 }
