--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,19 @@
         </activity>
 
         <activity
+            android:name=".games.WaitingActivity"
+            android:label="@string/waitingTitle"
+            android:screenOrientation="portrait"
+            android:noHistory="true">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".games.BlankGameActivity"
-            android:label="@string/app_name"
+            android:label="@string/firstRoomTitle"
+            android:screenOrientation="portrait"
             android:noHistory="true">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
