--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,14 +89,21 @@
 
         <activity
             android:name=".games.TurnGameActivity"
-            android:label="@string/turnGameMessage"
+            android:label="@string/turnGameMessage">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".games.SequenceGameActivity"
+            android:label="@string/sequenceGameTitle"
             android:screenOrientation="portrait"
             android:noHistory="true">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
