--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 21
     buildToolsVersion '21.1.1'
     defaultConfig {
-        applicationId "com.example.mirnabouchra.cloudolympics"
+        applicationId "com.google.cloudolympics"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
